--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Muñoz S.A.</title>
     <link rel="stylesheet" href="./estilos/style.css">
     <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
 </head>
 
+<!--CAMBIAR EL HEADER USANDO BOOTSTRAP (INCLUIDO EL LOGO)-->
+<!--ACOMODAR COSAS DE BOOTSTRAP CON CSS-->
 <body>
     <header>
         <div class="logotipo">
@@ -45,24 +49,36 @@
 
     <section class="cuerpo">
 
-        <div class="casa">
-            <img src="./imagenes/casa1.jpg" alt="Fachada de casa moderna" class="imagen">
-            <div class="descripcion">Descripcion de casa 1</div>
+        <div class="card casa" >
+            <img src="./imagenes/casa1.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion de la casa 1</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
         </div>
 
-        <div class="casa">
-            <img src="./imagenes/casa2.jpg" alt="Fachada de casa moderna" class="imagen">
-            <div class="descripcion">Descripcion de casa 2</div>
+        <div class="card casa" >
+            <img src="./imagenes/casa2.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion de la casa 2</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
         </div> 
 
-        <div class="casa">
-            <img src="./imagenes/casa3.jpg" alt="Fachada de casa moderna" class="imagen">
-            <div class="descripcion">Descripcion de casa 3</div>
+        <div class="card casa" >
+            <img src="./imagenes/casa3.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion de la casa 3</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
         </div>
 
-        <div class="casa">
-            <img src="./imagenes/casa4.jpg" alt="Fachada de casa moderna" class="imagen">
-            <div class="descripcion">Descripcion de casa 4</div>
+        <div class="card casa" >
+            <img src="./imagenes/casa4.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion de la casa 4</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
         </div>
 
     </section>
@@ -72,6 +88,8 @@
             <a href="./secciones/disclaimer.html">Disclaimer</a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
