--- a/secciones/distuhogar.html
+++ b/secciones/distuhogar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Muñoz S.A.-Diseña tu hogar</title>
     <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
@@ -43,23 +44,28 @@
         Diseña tu hogar
     </div>
 
+    <!--AGREGAR MÁS IMAGENES-->
     <section class="cuerpoDis">
         <div class="division">
             Junto con el asesoramiento de nuestros arquitectos trabajamos para construir una casa que se ajuste a tus necesidades
         </div>
-        <div class="casa">
-            <img src="../imagenes/plano1.jpg" alt="Plano de casa moderna" class="imagen">
-            <div class="descripcion">
-                Descripcion de plano 2
-            </div>
-        </div>
-        <div class="casa">
-            <img src="../imagenes/plano2.jpg" alt="Plano de casa moderna" class="imagen">
-            <div class="descripcion">
-                Descripcion de plano 2
+
+        <div class="card casa" >
+            <img src="../imagenes/plano1.jpg" class="card-img-top imagen" alt="Plano de casa moderna">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion de plano 1</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
 
+        <div class="card casa" >
+            <img src="../imagenes/plano2.jpg" class="card-img-top imagen" alt="Plano de casa moderna">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion de plano 2</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        
     </section>
     
 
@@ -68,6 +74,8 @@
             <a href="./disclaimer.html">Disclaimer</a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
