--- a/secciones/nuestrasobras.html
+++ b/secciones/nuestrasobras.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Muñoz S.A.-Nuestras obras</title>
     <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
@@ -49,9 +50,30 @@
             Aquí hay algunos ejemplos de  proyectos realizados anteriormente 
         </div>
 
-        <img src="../imagenes/casa4.jpg" alt="Fachada de casa moderna" class="imagen">
-        <img src="../imagenes/casa3.jpg" alt="Fachada de casa moderna" class="imagen">
-        <!-- AGREGAR MUCHAS IMAGENES Y EN CSS UN HOVER PARA AGREANDARLAS UN POCO-->
+
+        <!-- ARREGLAR TAMAÑO DE LAS IMAGENES Y SU DESCRIPCIÓN (QUIZAS PONERLA A LA DERECHA, ASI ENTRA MAS FACILMENTE Y ES MAS CÓMODO)-->
+        <div id="carouselWithControls" class="carousel slide w-75 " data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item">
+                    <img src="../imagenes/casa3.jpg" class="d-block w-100" alt="Fachada de casa moderna">
+                </div>
+                <div class="carousel-item">
+                    <img src="../imagenes/casa4.jpg" class="d-block w-100"" alt="Fachada de casa moderna">
+                </div>
+                <div class="carousel-item active">
+                    <img src="../imagenes/casa5.jpg" class="d-block w-100"" alt="Fachada de casa moderna">
+                </div>
+            </div>
+                <a class="carousel-control-prev" href="#carouselWithControls" role="button" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselWithControls" role="button" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </a>
+        </div>
+        <!-- AGREGAR MUCHAS IMAGENES-->
     </section>
     
     <footer>
@@ -59,6 +81,8 @@
             <a href="./disclaimer.html">Disclaimer</a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
