--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Muñoz S.A.-Servicios</title>
     <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
@@ -48,30 +49,41 @@
             Nos especializamos en casas de estilo moderno cuya popularidad fue creciendo a lo largo de los últimos años.
         </div>
 
-        <div class="casa">
-            <img src="../imagenes/casa5.jpg" alt="Fachada de casa moderna" class="imagen">
-            <div class="descripcion">Descripcion de la casa 5</div>
+        <div class="card casa" >
+            <img src="../imagenes/casa5.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion de la casa 5</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
         </div>
 
-        <div class="casa">
-            <img src="../imagenes/casa6.jpg" alt="Fachada de casa moderna" class="imagen">
-            <div class="descripcion">Descripcion de la casa 6</div>
+        <div class="card casa" >
+            <img src="../imagenes/casa6.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion de la casa 6</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
         </div>
 
         <div class="division">
             Tambíen diseñamos los interiores para que tu casa se sienta como tu hogar
         </div>
 
-        <div class="casa">
-            <img src="../imagenes/interior1.jpg" alt="Interior de casa moderna" class="imagen">
-            <div class="descripcion">Descripcion del interior 1</div>
+        <div class="card casa" >
+            <img src="../imagenes/interior1.jpg" class="card-img-top imagen" alt="Interior de casa moderna"">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion del interior 1</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
         </div>
 
-        <div class="casa">
-            <img src="../imagenes/interior2.jpg" alt="Interior de casa moderna" class="imagen">
-            <div class="descripcion">Descripcion del interior 2</div>
+        <div class="card casa" >
+            <img src="../imagenes/interior2.jpg" class="card-img-top imagen" alt="Interior de casa moderna"">
+            <div class="card-body">
+                <h4 class="card-title">Descripcion del interior 2</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
         </div>
-
     </section>
 
     <footer>
@@ -79,7 +91,7 @@
             <a href="./disclaimer.html">Disclaimer</a>
         </div>
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
