--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
         <div class="logotipo">
             <a href="./index.html"><img src="./imagenes/logo1.png" alt="logo de contstructora"></a>
         </div>
-        <div class="menu">
-            <ul class="navegacion">
-                <li>
-                    <a href="./index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./secciones/contacto.html">Contacto</a>
-                </li>
-                <li>
-                    <a href="./secciones/distuhogar.html">Diseña tu hogar</a>
-                </li>
-                <li>
-                    <a href="./secciones/nuestrasobras.html">Nuestras obras</a>
-                </li>
-                <li>
-                    <a href="./secciones/empresa.html">Empresa</a>
-                </li>
-                <li>
-                    <a href="./secciones/servicios.html">Servicios</a>
-                </li>
-            </ul>      
-        </div>
+        
+        <ul class="navegacion">
+            <li>
+                <a href="./index.html">Inicio</a>
+            </li>
+            <li>
+                <a href="./secciones/contacto.html">Contacto</a>
+            </li>
+            <li>
+                <a href="./secciones/distuhogar.html">Diseña tu hogar</a>
+            </li>
+            <li>
+                <a href="./secciones/nuestrasobras.html">Nuestras obras</a>
+            </li>
+            <li>
+                <a href="./secciones/empresa.html">Empresa</a>
+            </li>
+            <li>
+                <a href="./secciones/servicios.html">Servicios</a>
+            </li>
+        </ul>      
+       
     </header>
     <div class="capa"></div>
 
@@ -49,7 +49,7 @@
 
     <section class="cuerpo">
 
-        <div class="card casa" >
+        <div class="card " >
             <img src="./imagenes/casa1.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
                 <h4 class="card-title">Descripcion de la casa 1</h4>
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div class="card casa" >
+        <div class="card" >
             <img src="./imagenes/casa2.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
                 <h4 class="card-title">Descripcion de la casa 2</h4>
@@ -65,7 +65,7 @@
             </div>
         </div> 
 
-        <div class="card casa" >
+        <div class="card " >
             <img src="./imagenes/casa3.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
                 <h4 class="card-title">Descripcion de la casa 3</h4>
@@ -73,7 +73,7 @@
             </div>
         </div>
 
-        <div class="card casa" >
+        <div class="card " >
             <img src="./imagenes/casa4.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
                 <h4 class="card-title">Descripcion de la casa 4</h4>
