--- a/secciones/nuestrasobras.html
+++ b/secciones/nuestrasobras.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Muñoz S.A.-Nuestras obras</title>
-    <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
 </head>
 
@@ -44,24 +44,23 @@
         Nuestras obras
     </div>
 
+    <div class="division">
+        Aquí hay algunos ejemplos de  proyectos realizados anteriormente 
+    </div>
+
     <section class="cuerpoObras">
 
-        <div class="division">
-            Aquí hay algunos ejemplos de  proyectos realizados anteriormente 
-        </div>
-
-
-        <!-- ARREGLAR TAMAÑO DE LAS IMAGENES Y SU DESCRIPCIÓN (QUIZAS PONERLA A LA DERECHA, ASI ENTRA MAS FACILMENTE Y ES MAS CÓMODO)-->
+        <!-- ARREGLAR resolucion DE LAS IMAGENES Y SU DESCRIPCIÓN (QUIZAS PONERLA A LA DERECHA, ASI ENTRA MAS FACILMENTE Y ES MAS CÓMODO)-->
         <div id="carouselWithControls" class="carousel slide w-75 " data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item">
                     <img src="../imagenes/casa3.jpg" class="d-block w-100" alt="Fachada de casa moderna">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/casa4.jpg" class="d-block w-100"" alt="Fachada de casa moderna">
+                    <img src="../imagenes/casa4.jpg" class="d-block w-100" alt="Fachada de casa moderna">
                 </div>
                 <div class="carousel-item active">
-                    <img src="../imagenes/casa5.jpg" class="d-block w-100"" alt="Fachada de casa moderna">
+                    <img src="../imagenes/casa5.jpg" class="d-block w-100" alt="Fachada de casa moderna">
                 </div>
             </div>
                 <a class="carousel-control-prev" href="#carouselWithControls" role="button" data-bs-slide="prev">
