--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Muñoz S.A.-Contacto</title>
-    <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
 </head>
 
@@ -43,26 +43,26 @@
         Contacto
     </div>
 
-    <section class="cuerpoCont">
+    <section class="cuerpoCont"> <!---revisar longitud de casillas (no hay nombres o emails tan largos...)-->
         <div class="division">
             Dejanos tu correo y nos pondremos en contacto a la brevedad
         </div>
         <form class="row g-3">
             <div class="col-md-6">
               <label for="inputEmail4" class="form-label">Nombre</label>
-              <input type="email" class="form-control" id="inputEmail4">
+              <input type="email" class="form-control" id="inputNombre">
             </div>
             <div class="col-md-6">
               <label for="inputPassword4" class="form-label">Apellido</label>
-              <input type="password" class="form-control" id="inputPassword4">
+              <input type="password" class="form-control" id="inputApellido">
             </div>
             <div class="col-12">
               <label for="inputAddress" class="form-label">Email</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+              <input type="text" class="form-control" id="inputEmail">
             </div>
             <div class="col-12">
               <label for="inputAddress2" class="form-label">Mensaje</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+              <input type="text" class="form-control" id="inputMensaje">
             </div>
             <div class="col-12">
               <div class="form-check">
@@ -73,7 +73,7 @@
               </div>
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-primary">Sign in</button>
+              <button type="submit" class="btn btn-primary">Enviar consulta</button>
             </div>
           </form>
     </section>
