--- a/secciones/disclaimer.html
+++ b/secciones/disclaimer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Disclaimer del TP</title>
-    <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
 </head>
 
@@ -15,20 +15,22 @@
         <div class="titulo">
             <a href="../index.html"><img src="../imagenes/logo1.png" alt="logo de contstructora"></a>
         </div>
-        <p>
-            <a href="../index.html">Volver al inicio del sitio</a>
-        </p>
     </header>
 
     <div class="capa"></div>
 
     <div class="titulo">
-        Importante  
+        Disclaimer  
     </div>
-    <section class="infoDiscl">
-        <div class="division">
-            Este sitio web es una práctica realizada en <a href="https://www.coderhouse.com/">Coderhouse</a> y la información mostrada es ficticia, por lo que no hay ningún fin de lucro
-        </div>
+    <section class="cuerpoDiscl">
+        <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">IMPORTANTE</h5>
+              <p class="card-text">Este sitio web es una práctica realizada en <a href="https://www.coderhouse.com/">Coderhouse</a> y la información mostrada es ficticia, por lo que no hay ningún fin de lucro.</p>
+              <a href="https://www.coderhouse.com/" class="btn btn-primary">link a Coderhouse</a>
+              <a href="../index.html" class="btn btn-primary">volver al inicio</a>
+            </div>
+          </div>
         <p>
             Las imagenes fueron sacadas de google
         </p>
