--- a/secciones/distuhogar.html
+++ b/secciones/distuhogar.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Muñoz S.A.-Diseña tu hogar</title>
-    <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
 </head>
 
 <body>
     <header>
         <div class="titulo">
-            <a href="../index.html"><img src="../imagenes/logo2.pn1" alt="logo de contstructora"></a>
+            <a href="../index.html"><img src="../imagenes/logo1.png" alt="logo de contstructora"></a>
         </div>
 
         <ul class="navegacion">
@@ -44,13 +44,13 @@
         Diseña tu hogar
     </div>
 
-    <!--AGREGAR MÁS IMAGENES-->
-    <section class="cuerpoDis">
+    <!--AGREGAR MÁS CONTENIDO Y APROVECHAR EL ESPACIO-->
         <div class="division">
             Junto con el asesoramiento de nuestros arquitectos trabajamos para construir una casa que se ajuste a tus necesidades
         </div>
 
-        <div class="card casa" >
+    <section class="cuerpoDise">
+        <div class="card " >
             <img src="../imagenes/plano1.jpg" class="card-img-top imagen" alt="Plano de casa moderna">
             <div class="card-body">
                 <h4 class="card-title">Descripcion de plano 1</h4>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="card casa" >
+        <div class="card" >
             <img src="../imagenes/plano2.jpg" class="card-img-top imagen" alt="Plano de casa moderna">
             <div class="card-body">
                 <h4 class="card-title">Descripcion de plano 2</h4>
