--- a/secciones/empresa.html
+++ b/secciones/empresa.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Muñoz S.A.-Empresa</title>
-    <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/favcasa.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/style.css">
 </head>
 
@@ -48,6 +48,23 @@
         Somos una empresa fundada el 29 de junio de 1986 en Buenos Aires, Argentina. 
     </div>
     <!--AGREGAR UN MAPA (IMAGEN) y datos sobre como llegar etc-->
+    <section class="cuerpoEmpre">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9841.013899022073!2d-58.38182642346411!3d-34.60303787917863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1646672003686!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+        <div class="card">
+            <div class="card-header">
+              Sede central
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Dónde estamos</h5>
+              <p class="card-text">Localizada en pleno centro de Buenos Aires, nuestra sede central está a pocas cuadras del Obelisco.</p>
+            </div>
+            <div class="card-footer text-muted">
+              Próximamente en Córdoba, Mendoza y Santa Fe.
+            </div>
+          </div>
+    </section>
+    
     <footer>
         <p>
             <a href="./disclaimer.html">Disclaimer</a>
