--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -90,7 +90,7 @@
     </section>
     
     
-    <footer>
+    <footer class="pie">
       <ul class="nav navbar-expand-lg navbar-dark bg-dark justify-content-center">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./disclaimer.html">Disclaimer</a>
