--- a/secciones/disclaimer.html
+++ b/secciones/disclaimer.html
@@ -62,7 +62,7 @@
             </div>
           </div>
         <p>
-            Las imagenes fueron sacadas de google
+            Las imagenes y algunas descripciones fueron sacadas de google
         </p>
     </section>
     
