--- a/secciones/distuhogar.html
+++ b/secciones/distuhogar.html
@@ -59,19 +59,19 @@
         </div>
 
     <section class="cuerpoDise">
-        <div class="card " >
+        <div class="card casa" >
             <img src="../imagenes/plano3.jpg" class="card-img-top imagen" alt="Plano de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de plano 1</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">Forma parte del proyecto</h4>
+              <p class="card-text descripcion">Todos las obras fueron diseñadas por nuestros arquitectos suiguiendo las necesidades y sugerencias de nuestros clientes. Abrimos canales de comunicación constante así tu hogar se acomoda perfectamente a tu gusto.</p>
             </div>
         </div>
 
-        <div class="card" >
+        <div class="card casa" >
             <img src="../imagenes/plano4.jpg" class="card-img-top imagen" alt="Plano de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de plano 2</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">Proceso de creación</h4>
+              <p class="card-text descripcion">Lo primero para realzar un proyecto es evaluar las necesidades del cliente. Desde ese punto se crearan los primeros planos, que tras la aprobación se complementarán con renders de alta calidad para visualisar tu futura casa.</p>
             </div>
         </div>
         
