--- a/secciones/nuestrasobras.html
+++ b/secciones/nuestrasobras.html
@@ -59,8 +59,8 @@
 
     <section class="cuerpoObras">
 
-        <!-- ARREGLAR resolucion DE LAS IMAGENES Y SU DESCRIPCIÓN (QUIZAS PONERLA A LA DERECHA, ASI ENTRA MAS FACILMENTE Y ES MAS CÓMODO)-->
-        <div id="carouselWithControls" class="carousel slide w-75" data-bs-ride="carousel">
+        <!-- ARREGLAR resolucion DE LAS IMAGENES Y SU DESCRIPCIÓN (solucionado)-->
+        <div id="carouselWithControls" class="carousel slide carru " data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="../imagenes/casa8.jpg" class="d-block w-100" alt="Fachada de casa moderna">
