--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="casa, casas modernas, constructora, interior moderno">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-
     <title>Muñoz S.A.</title>
     <link rel="stylesheet" href="./estilos/style.css">
     <link rel="shortcut icon" href="./imagenes/favcasa.png" type="image/x-icon">
@@ -61,48 +60,61 @@
         <div class="card " >
             <img src="./imagenes/casa13.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de la casa 13</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">LUXURY 4040</h4>
+              <p class="card-text">id marcado por su estilo y elegancia. Se trata de un diseño moderno con amplios espacios muy bien iluminados.
+                La distribución estratégica de sus ambientes hace práctico y funcional su recorrido.
+                Posee un ingreso imponente y elegante, que recibe a los habitantes y a sus invitados con un ambiente amplio, conformado por sala de estar, comedor y cocina.
+                Cuenta con 2 baños y 3 dormitorios, uno de ellos en suite con vestidor, elemental para los amantes del orden y las prendas de vestir.
+                En su exterior, presenta listones de madera que le dan una categoría y estatus diferencial. Presenta una cochera con un amplio asador, ideal para disfrutar los fines de semana en familia y amigos.</p>
             </div>
         </div>
 
         <div class="card" >
             <img src="./imagenes/casa16.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de la casa 16</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">LUXURY 4080</h4>
+              <p class="card-text">Diseño moderno y minimalista. Su exterior presenta un amplio garage. El camino vanguardista dirige hacia la entrada de la casa. En su interior se encuentra una cómoda sala de estar/comedor, la misma conecta con un dormitorio suite que presenta un funcional vestidor. Este id posee otros dos dormitorios, los cuales conectan con otro baño social y la contemporánea cocina.</p>
             </div>
         </div> 
 
         <div class="card " >
             <img src="./imagenes/casa14.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de la casa 14</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">PALACE 5020</h4>
+              <p class="card-text">Impactante diseño moderno con una marcada personalidad. Este id de dos pisos con grandes ventanas invita a sus habitantes a disfrutar de buena iluminación y una excelente vista todos los días. 
+                En su planta inferior, se destaca la comodidad de sus espacios a través de una funcional cocina, comedor y una sala de estar amplia y espaciosa. 
+                A su vez, cuenta con una oficina que se destaca por brindar tranquilidad a la hora de pensar en negocios. 
+                En su planta superior, cuenta con 2 dormitorios con vestidor y un playroom que invita a todos a disfrutar de momentos únicos.
+                En su exterior cuenta con una cochera doble  y un amplio quincho ideal para disfrutar con amigos y familia.</p>
             </div>
         </div>
 
         <div class="card " >
             <img src="./imagenes/casa15.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de la casa 15</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">PALACE 6050</h4>
+              <p class="card-text">Amplitud y lujo son sinónimos de esta casa. Al recorrer la plata inferior, descubrimos un funcional estar comedor conectado con una gran cocina con barra desayunadora. Junto a ésta, encontramos un lavadero y un baño para invitados.
+                Por otro lado, la planta superior presenta una cómoda distribución de dormitorios, uno en suite con vestidor y balcón. Además, cuenta con un cómodo escritorio ideal para trabajar desde el hogar.
+                En su exterior presenta una galería con asador, cochera doble y una amplia piscina con deck moderno para pasar una gran tarde de verano junto a amigos y familia.</p>
             </div>
         </div>
 
         <div class="card " >
-            <img src="./imagenes/casa13.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
+            <img src="./imagenes/casa17.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de la casa 13</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">PALACE 5010</h4>
+              <p class="card-text">Este increíble diseño se destaca por sus amplios ventanales, ideales para lograr una excelente luminosidad en cada uno de sus ambientes.
+                Próximo al ingreso, se encuentra un funcional Estar Comedor, conectado directamente a la Cocina. Además cuenta con un lavadero amplio y luminoso y un baño para invitados.
+                En la planta superior, se ubican tres amplios dormitorios, todos ellos con vestidor, uno en suite.
+                En su exterior, cuenta con cochera doble más una galería con un amplio asador, ideal para compartir los fines de semana.</p>
             </div>
         </div>
 
         <div class="card " >
             <img src="./imagenes/casa12.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de la casa 12</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">PALACE 5030</h4>
+              <p class="card-text">Moderno diseño minimalista de dos plantas. Su exterior dispone de cochera, galería y galería/balcón, ideal para disfrutar día a día. En su PB presenta una armoniosa distribución de los espacios, con un amplio comedor y estar. Esta misma planta, posee un dormitorio, cocina, dos baños y un cómodo sum para ser útil en reuniones o como sala de relajación. En su PA se diseñaron dos dormitorios con vestidor y uno en específico como Suite, a su vez, se ideó una sala extra para poder utilizarse como oficina y lograr el confort de HomeOffice.</p>
             </div>
         </div>
 
