--- a/secciones/empresa.html
+++ b/secciones/empresa.html
@@ -58,7 +58,7 @@
     </div>
     <!--AGREGAR UN MAPA (IMAGEN) y datos sobre como llegar etc-->
     <section class="cuerpoEmpre">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9841.013899022073!2d-58.38182642346411!3d-34.60303787917863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1646672003686!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9841.013899022073!2d-58.38182642346411!3d-34.60303787917863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1646672003686!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" class="mapa"></iframe>
 
         <div class="card">
             <div class="card-header">
