--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -61,16 +61,20 @@
         <div class="card " >
             <img src="../imagenes/casa11.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de la casa 5</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">PALACE 5020</h4>
+              <p class="card-text descripcion">Impactante diseño moderno con una marcada personalidad. Este id de dos pisos con grandes ventanas invita a sus habitantes a disfrutar de buena iluminación y una excelente vista todos los días. 
+                En su planta inferior, se destaca la comodidad de sus espacios a través de una funcional cocina, comedor y una sala de estar amplia y espaciosa. 
+                A su vez, cuenta con una oficina que se destaca por brindar tranquilidad a la hora de pensar en negocios. 
+                En su planta superior, cuenta con 2 dormitorios con vestidor y un playroom que invita a todos a disfrutar de momentos únicos.
+                En su exterior cuenta con una cochera doble  y un amplio quincho ideal para disfrutar con amigos y familia.</p>
             </div>
         </div>
 
         <div class="card justify-content-center" >
             <img src="../imagenes/casa12.jpg" class="card-img-top imagen" alt="Fachada de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion de la casa 6</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">PALACE 5030</h4>
+              <p class="card-text descripcion">Moderno diseño minimalista de dos plantas. Su exterior dispone de cochera, galería y galería/balcón, ideal para disfrutar día a día. En su PB presenta una armoniosa distribución de los espacios, con un amplio comedor y estar. Esta misma planta, posee un dormitorio, cocina, dos baños y un cómodo sum para ser útil en reuniones o como sala de relajación. En su PA se diseñaron dos dormitorios con vestidor y uno en específico como Suite, a su vez, se ideó una sala extra para poder utilizarse como oficina y lograr el confort de HomeOffice</p>
             </div>
         </div>
 
@@ -79,18 +83,18 @@
         </div>
 
         <div class="card" >
-            <img src="../imagenes/interior3.jpg" class="card-img-top imagen" alt="Interior de casa moderna"">
+            <img src="../imagenes/interior3.jpg" class="card-img-top imagen" alt="Interior de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion del interior 1</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">Tanto por fuera como por dentro</h4>
+              <p class="card-text descripcion">Nuestro servicio de diseño de interiores fue galardonado en numerosas revistas por la armonía de nuestros ambientes. Cada objeto cumple un rol importante por lo que nos dedicamos a asesorarte en como decorar tu hogar para que te sientas cómodo.</p>
             </div>
         </div>
 
         <div class="card" >
-            <img src="../imagenes/interior4.jpg" class="card-img-top imagen" alt="Interior de casa moderna"">
+            <img src="../imagenes/interior4.jpg" class="card-img-top imagen" alt="Interior de casa moderna">
             <div class="card-body">
-                <h4 class="card-title">Descripcion del interior 2</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-title">Interior y exterior</h4>
+              <p class="card-text descripcion">Recomendamos que el interior y el extrerior de tu hogar siempre tengan coherencia. Esto se logra estudiando la arquitectura de la casa y ,por supuesto, los gustos del propietario.</p>
             </div>
         </div>
     </section>
